--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,4 @@
 	sb = show-branch
 	mylog="git log --graph --name-status --pretty=format:'%C(red)%h %C(green)%an %Creset%s %C(yellow)%d%Creset'"
 	clone-Grunt="git clone https://github.com/konweb/Grunt"
+	clone-dotfiles="git clone https://github.com/konweb/dotfiles"
