--- a/.gitconfig
+++ b/.gitconfig
@@ -26,4 +26,6 @@
 	pl = pull
 	ps = push
 	sb = show-branch
+	cle = clean
+	me = merge
 	mylog = log --graph --name-status --pretty=format:'%C(red)%h %C(green)%an %Creset%s %C(yellow)%d%Creset'
