--- a/.gitconfig
+++ b/.gitconfig
@@ -28,7 +28,7 @@
 	ps = push
 	sb = show-branch
 	cle = clean
-	me = merge
+	me = merge --no-ff
 	mylog = log --graph --name-status --pretty=format:'%C(red)%h %C(green)%an %Creset%s %C(yellow)%d%Creset'
 	pull-dry-run = !"git fetch origin; B=$(git rev-parse --abbrev-ref HEAD); git diff --stat --summary ${B}..origin/${B}"
 	skip = update-index --skip-worktree
